Update MISE EN PLACE CREDIT