@@ -1,14 +1,23 @@
 package io.digiservices.authorizationserver.security;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.annotation.Order;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.security.authentication.AuthenticationServiceException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.core.OAuth2RefreshToken;
 import org.springframework.security.oauth2.core.OAuth2Token;
@@ -19,34 +28,31 @@ import org.springframework.security.oauth2.server.authorization.config.annotatio
 import org.springframework.security.oauth2.server.authorization.settings.AuthorizationServerSettings;
 import org.springframework.security.oauth2.server.authorization.token.*;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.access.AccessDeniedHandlerImpl;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
 import org.springframework.security.web.authentication.LoginUrlAuthenticationEntryPoint;
 import org.springframework.security.web.authentication.SavedRequestAwareAuthenticationSuccessHandler;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.CookieClearingLogoutHandler;
-import org.springframework.security.web.authentication.logout.SimpleUrlLogoutSuccessHandler;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.security.web.util.matcher.MediaTypeRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 import static com.google.common.net.HttpHeaders.X_REQUESTED_WITH;
-import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
-import static org.springframework.http.HttpHeaders.ORIGIN;
-import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN;
-import static org.springframework.http.HttpHeaders.ACCEPT;
-import static org.springframework.http.HttpHeaders.AUTHORIZATION;
-import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD;
-import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS;
-import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_ALLOW_CREDENTIALS;
-import static org.springframework.http.HttpMethod.GET;
-import static org.springframework.http.HttpMethod.POST;
-import static org.springframework.http.HttpMethod.PUT;
-import static org.springframework.http.HttpMethod.PATCH;
-import static org.springframework.http.HttpMethod.OPTIONS;
-import static org.springframework.http.HttpMethod.DELETE;
+import static org.springframework.http.HttpHeaders.*;
+import static org.springframework.http.HttpMethod.*;
 import static org.springframework.security.oauth2.server.authorization.OAuth2TokenType.ACCESS_TOKEN;
+
 
 import java.util.Arrays;
 import java.util.List;
@@ -60,13 +66,13 @@ public class AuthorizationServerConfig {
     // http://localhost:8080/.well-known/openid-configuration
     private static final String AUTHORITY_KEY = "authorities";
     private final JwtConfiguration jwtConfiguration;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Bean
     @Order(1)
     public SecurityFilterChain oauth2ServerConfig(HttpSecurity http, RegisteredClientRepository registeredClientRepository, OAuth2TokenCustomizer<JwtEncodingContext> customizer) throws Exception {
         http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
 
-        // Change this line:
         var authorizationConfig = new OAuth2AuthorizationServerConfigurer();
 
         http
@@ -82,25 +88,105 @@ public class AuthorizationServerConfig {
                         }))
                 .authorizeHttpRequests(authorize -> authorize.anyRequest().authenticated());
         http.exceptionHandling(exceptions -> exceptions.accessDeniedPage("/accessdenied")
-                .defaultAuthenticationEntryPointFor(new LoginUrlAuthenticationEntryPoint("/login"), new MediaTypeRequestMatcher(MediaType.TEXT_HTML)));
+                .defaultAuthenticationEntryPointFor(new LoginUrlAuthenticationEntryPoint("/login"),
+                        new MediaTypeRequestMatcher(MediaType.TEXT_HTML)));
         return http.build();
     }
+
     @Bean
     @Order(2)
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain apiSecurityFilterChain(HttpSecurity http, AuthenticationConfiguration authConfig) throws Exception {
         http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
-        http.authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/login", "/oauth2/authorize/**", "oauth2/authorize").permitAll()
-                .requestMatchers(POST, "/logout").permitAll()
-                .requestMatchers("/mfa").hasAuthority("MFA_REQUIRED")
-                .anyRequest().authenticated());
+
+        http.securityMatcher("/api/**", "/user/**")
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers("/api/login").permitAll()
+                        .anyRequest().authenticated())
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(csrf -> csrf.disable())
+                .exceptionHandling(ex -> ex
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+                            response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"Authentication required\"}");
+                        }))
+                .addFilterBefore(jsonAuthenticationFilter(authConfig), UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
+    }
+
+    @Bean
+    @Order(3)
+    public SecurityFilterChain webSecurityFilterChain(HttpSecurity http) throws Exception {
+        http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
+
+        http.securityMatcher("/**")
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers("/login", "/oauth2/authorize/**", "/oauth2/authorize").permitAll()
+                        .requestMatchers(POST, "/logout").permitAll()
+                        .requestMatchers("/mfa").hasAuthority("MFA_REQUIRED")
+                        .anyRequest().authenticated());
+
         http.formLogin(login -> login
                 .loginPage("/login")
                 .successHandler(new MfaAuthenticationHandler("/mfa", "MFA_REQUIRED"))
                 .failureHandler(new SimpleUrlAuthenticationFailureHandler("/login")));
-        http.logout(logout -> logout.logoutSuccessUrl("http://localhost:3000")
+
+        http.logout(logout -> logout
+                .logoutSuccessUrl("http://51.91.254.218:4200")
                 .addLogoutHandler(new CookieClearingLogoutHandler("JSESSIONID")));
+
         return http.build();
+    }
+
+    @Bean
+    public JsonAuthenticationFilter jsonAuthenticationFilter(AuthenticationConfiguration authConfig) throws Exception {
+        JsonAuthenticationFilter filter = new JsonAuthenticationFilter();
+        filter.setAuthenticationManager(authConfig.getAuthenticationManager());
+        filter.setRequiresAuthenticationRequestMatcher(new AntPathRequestMatcher("/api/login", "POST"));
+
+        filter.setAuthenticationSuccessHandler((request, response, authentication) -> {
+            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+            response.getWriter().write("{\"status\": \"success\", \"message\": \"Authentication successful\"}");
+        });
+
+        filter.setAuthenticationFailureHandler((request, response, exception) -> {
+            response.setStatus(HttpStatus.UNAUTHORIZED.value());
+            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+            response.getWriter().write("{\"status\": \"error\", \"message\": \"" + exception.getMessage() + "\"}");
+        });
+
+        return filter;
+    }
+
+    public class JsonAuthenticationFilter extends UsernamePasswordAuthenticationFilter {
+        @Override
+        public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response)
+                throws AuthenticationException {
+            if (!request.getMethod().equals("POST")) {
+                throw new AuthenticationServiceException("Authentication method not supported: " + request.getMethod());
+            }
+
+            try {
+                Map<String, String> credentials = objectMapper.readValue(
+                        request.getInputStream(),
+                        new TypeReference<Map<String, String>>() {}
+                );
+
+                String username = credentials.getOrDefault(getUsernameParameter(), "");
+                String password = credentials.getOrDefault(getPasswordParameter(), "");
+
+                UsernamePasswordAuthenticationToken authRequest =
+                        UsernamePasswordAuthenticationToken.unauthenticated(username, password);
+
+                setDetails(request, authRequest);
+
+                return this.getAuthenticationManager().authenticate(authRequest);
+            } catch (IOException e) {
+                throw new AuthenticationServiceException("Authentication failed: " + e.getMessage(), e);
+            }
+        }
     }
 
     @Bean
@@ -139,17 +225,36 @@ public class AuthorizationServerConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         var corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(List.of("http://192.168.1.157:3000", "http://localhost:3000", "http://192.168.1.159:3000", "http://localhost:4200", "100.14.214.212:3000",  "http://localhost:4200", "http://localhost:3000", "http://51.91.254.218:4200","http://51.91.254.218:3000"));
-        corsConfiguration.setAllowedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, "X_REQUESTED_WITH", ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
-        corsConfiguration.setExposedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, "X_REQUESTED_WITH", ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
-        corsConfiguration.setAllowedMethods(Arrays.asList(GET.name(), POST.name(), PUT.name(), PATCH.name(), DELETE.name(), OPTIONS.name()));
+        corsConfiguration.setAllowedOrigins(List.of(
+                "http://localhost:4200",
+                "http://51.91.254.218:4200"
+        ));
+        corsConfiguration.setAllowedHeaders(Arrays.asList(
+                ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE,
+                ACCEPT, AUTHORIZATION, X_REQUESTED_WITH,
+                ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS,
+                ACCESS_CONTROL_ALLOW_CREDENTIALS, "X-XSRF-TOKEN"
+        ));
+        corsConfiguration.setExposedHeaders(Arrays.asList(
+                ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE,
+                ACCEPT, AUTHORIZATION, X_REQUESTED_WITH,
+                ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS,
+                ACCESS_CONTROL_ALLOW_CREDENTIALS
+        ));
+        corsConfiguration.setAllowedMethods(Arrays.asList(
+                GET.name(), POST.name(), PUT.name(), PATCH.name(),
+                DELETE.name(), OPTIONS.name()
+        ));
         corsConfiguration.setMaxAge(3600L);
+
         var source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
 
     private String getAuthorities(JwtEncodingContext context) {
-        return context.getPrincipal().getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.joining(","));
+        return context.getPrincipal().getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .collect(Collectors.joining(","));
     }
 }
